added exception handling to product service